[project]
name = "treecat"
description="Displays a tree view of files and their contents"
readme = "README.md"
authors = [
  {name="Tom Flanagan", email="tom@zkpq.ca"}
]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Desktop Environment :: File Managers",
  "Topic :: System :: Filesystems",
  "Topic :: Utilities",
]
dynamic = ["version"]

dependencies = [
  "colorama"
]

[project.urls]
Homepage = "https://github.com/Knio/treecat"
Source = "https://github.com/Knio/treecat"

[project.scripts]
tcat = "treecat:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["treecat"]

[tool.setuptools.dynamic]
version = {attr = "treecat._version.version"}
